# ShulkerNBT

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh.md
include/shulker/: Nbt.h  Type.h
include/shulker/common/: Exceptions.h  MacroCommon.h  MacroScope.h  StringUtils.h
include/shulker/io/: BinarySerializer.h
include/shulker/io/adapters/: OutputAdapters.h
include/shulker/io/input/: NbtReader.h
include/shulker/io/output/: NbtWriter.h  SnbtSerializer.h
include/shulker/io/snbt/: SnbtSerializer.h
include/shulker/meta/: CppFuture.h  TypeTraits.h
include/shulker/tags/: BasicTag.h  ByteArrayTag.h  ByteTag.h  CompoundTag.h  DoubleTag.h  EndTag.h  FloatTag.h  IntArrayTag.h  IntTag.h  ListTag.h  LongArrayTag.h  LongTag.h  ShortTag.h  StringTag.h  TagReference.h
src/: CMakeLists.txt
src/common/: Exceptions.cpp
src/io/output/: SnbtSerializer.cpp
src/io/snbt/: SnbtSerializer.cpp
src/tags/: BasicTag.cpp  ByteArrayTag.cpp  ByteTag.cpp  CompoundTag.cpp  DoubleTag.cpp  EndTag.cpp  FloatTag.cpp  IntArrayTag.cpp  IntTag.cpp  ListTag.cpp  LongArrayTag.cpp  LongTag.cpp  ShortTag.cpp  StringTag.cpp  TagReference.cpp
tests/: CMakeLists.txt  test.cpp
